--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@capacitor/core": "^8.0.2",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "firebase": "^12.9.0",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
